k3s/infra/authentik/authentik-helm.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
