k3s/infra/authentik/authentik-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
  - match: "Host(`authentik.k3s.hackbox.cc`)"
    kind: Rule
    services:
    - name: authentik-server
      kind: Service
      port: 443
      namespace: authentik
